# y-rig

./: .gitignore  .gitmodules  AUTHORS.md  LICENSE  README.md  maya-setup.py  pyproject.toml
.githooks/: post-checkout  pre-commit  update-venv
.github/workflows/: ci.yml
custom_steps/: README.md
docs/: index.md
docs/images/: y-rig_thumbnail.graphite
shifter/components/: README.md
shifter/components/y_arm_01/: __init__.py  guide.py  settingsUI.py
shifter/components/y_spine_01/: __init__.py  guide.py  settingsUI.py  settingsUI.ui
src/yrig/: README.md  __init__.py  math.py  name.py
src/yrig/color/: __init__.py  convert.py  core.py  gradient.py
src/yrig/maya_api/: __init__.py  attribute.py  node.py
src/yrig/skin/: __init__.py  core.py  ng.py  split.py  visualize.py
src/yrig/spline/: __init__.py  curve.py  math.py  maya_query.py
src/yrig/spline/matrix_spline/: __init__.py  build.py  core.py  pin.py
src/yrig/structs/: __init__.py  transform.py
src/yrig/transform/: __init__.py  matrix.py  utils.py
yrig/: __init__.py
yrig/spline/: __init__.py  math.py  maya_query.py
yrig/structs/: __init__.py  transform.py
