[project]
name = "y-rig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "maya-stubs>=0.4.2",
    "numpy>=2.4.1",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.pyright]
extraPaths = [
    "/usr/autodesk/ApplicationPlugins/ngskintools2/Contents/scripts",
    "third_party/mgear/release/scripts/",
    "src"
]
ignore = ["third_party"]
typeCheckingMode = "standard"
reportMissingModuleSource = "information"

[tool.ty.environment]
extra-paths = [
    "/usr/autodesk/ApplicationPlugins/ngskintools2/Contents/scripts",
    "third_party/mgear/release/scripts/",
    "src"
]

[tool.ty.src]
exclude = ["third_party"]

[tool.ty.rules]
unused-ignore-comment = "ignore"

[tool.ruff]
line-length = 100
exclude = ["third_party", "maya-setup.py"]
